# Alter-Ego-AI

./: .gitignore  LICENSE  README.md  ROADMAP.md  TODO_LIST.txt  azure_stt_api.py  clearmemory.py  confirm_clear.vbs  construct.py  elevenlabs_api.py  gui.py  neuralyzer.bat  open_ELECTRON.bat  open_PYTHON.bat  openai_api.py  pyproject.toml  query_history.txt  recognized_speech.txt  requirements.txt  requirements_versions.txt  run_py_ui.bat  run_server.bat  ui_azure.py  ui_combined.py  ui_elevenlabs.py  ui_openai.py  whenbuilding.txt
ELECTRON/: Ideas.txt  Known Issues.txt  index.html  main.js  package-lock.json  package.json  preload.js  treeignore.txt
ELECTRON/api/: elevenlabs_api.py  emotions_api.py  openai_api.py  server.py
ELECTRON/assets/css/: splash.css  styles.css
ELECTRON/assets/js/: api_key_manager.js  app.js  persona_manager.js  software_details.js  voice_manager.js
ELECTRON/data/: credits.json
ELECTRON/persistentdata/personas/: Dictionary.chr  Ringo.chr
ELECTRON/source/: index.html  ipcHandlers.js  main.js  package-lock.json  package.json  postcss.config.js  preload.js  utils.js  wizard.html
ELECTRON/source/api/: db_memory.py  elevenlabs_api.py  embedding_memory.py  emotions_api.py  goEmotionsLogic.js  keysUtil.js  keys_util.py  localLogic.js  memory_manager.py  ollama_manager.py  ollama_server.py  openai_api.py  openai_manager.py  requirements.txt  server.py  voiceAgent.js
ELECTRON/source/assets/css/: styles.css
ELECTRON/source/assets/js/: api_key_manager.js  app.js  chat_history.js  clear_memory.js  memory_manager.js  persona_manager.js  software_details.js  splash.js  voice_manager.js
ELECTRON/source/data/: credits.json
ELECTRON/source/install/: emotionpipe.py  mempipe.py
ELECTRON/source/logs/: token_usage.json
ELECTRON/source/persistentdata/memory_databases/ALTER EGO/: chat_history.json  doc_store.json  memory.db
ELECTRON/source/persistentdata/memory_databases/Fitness Coach.chr/: chat_history.json  memory.db
ELECTRON/source/persistentdata/memory_databases/Parrot.chr/: chat_history.json  memory.db
ELECTRON/source/persistentdata/memory_databases/Tech Wiz.chr/: chat_history.json
ELECTRON/source/persistentdata/personas/: Aerith GF.chr  Creative Writer.chr  Dictionary.chr  Fitness Coach.chr  Historian.chr  Math Tutor.chr  Neurotypical Translator.chr  Parrot.chr  Tech Wiz.chr  Test Dummy.chr  Therapist.chr
PYTHON/: open_AE.bat  pyproject.toml  run_py_ui.bat
PYTHON/alter_ego/: requirements.txt
PYTHON/alter_ego/gui/: __main__.py  character_manager.py  construct.py  gui.py
PYTHON/alter_ego/model/: elevenlabs_api.py  textgen_gpt.py
PYTHON/alter_ego/persistent/memory_databases/: DEFAULT_gpt_memory.db
alter_ego/: __main__.py
alter_ego/gui/: __main__.py  api_key_manager.py  construct.py  gui.py  workers.py
alter_ego/model/: elevenlabs_api.py  textgen_llama.py
alter_ego/persistent/characterdata/: DEFAULT.chr
alter_ego/persistent/memory_databases/: DEFAULT_ollama_memory.db
api/: api_server.py  azure_stt_api.py  config.ini  elevenlabs_api.py  elevenlabs_models.json  emotions_api.py  local_llm.py  openai_api.py  run_server.bat  server.py
character_creator/: index.html  package.json  renderer.js  styles.css
character_creator_outdated/: main.js  styles.css
characterdata/: ALTEREGO.chr  ALTEREGO.chr_mem.json  Aigis.chr  Aigis_mem.json  Alter Ego.chr  DEFAULT.chr  DEFAULT_mem.json  Doppelganger.chr  Fujisaki.chr  LL.chr  Nondescript.chr  Ringo.chr  Sophia.chr  TUTORIAL.chr  Wheatley.chr  bufordhubert.chr  default.pers  hecker.chr  scholar.chr  shikanoko.chr  shikanoko.chr_mem.json  shikanoko.pers  spacecore.chr  yukari.chr  yukari.pers
crash_reports/: crash_report_20241115_130734.txt  crash_report_20241115_130736.txt
electron/: main.js  package-lock.json  package.json
electron/renderer/: index.html  popup.html  preload.js  renderer.js  style.css
gui/: api_key_manager.py  character_manager.py  construct.py  gui.py  main.py  run_py_ui.bat  workers.py  workers_openai.py
gui/avatar/: avatar.py
gui/crash_reports/: crash_report_2024-09-26_08-29-16.txt  crash_report_20241103_162314.txt  crash_report_20241103_164938.txt  crash_report_20241103_165906.txt  crash_report_20241103_172101.txt  crash_report_20241103_172121.txt  crash_report_20241103_172209.txt  crash_report_20241103_172224.txt  crash_report_20241105_202104.txt
gui_electron/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
memory_databases/: Aigis_memory.db  Fujisaki_memory.db  Ringo_ollama_memory.db  Sophia_memory.db  TUTORIAL_memory.db  Wheatley_memory.db  spacecore_memory.db
model/: elevenlabs_api.py  elevenlabs_models.json  emotions.py  textgen_gpt.py  textgen_llama.py
scripts/: clearmemory.py  neuralyzer.bat  run_new_ui.bat  run_ui.bat  run_ui_outdated.bat
templates/: openai_api_template.py
testing/: ui_azure.py  ui_elevenlabs.py  ui_emotions.py  ui_openai.py
ui/: avatar.py  ui_combined.py
ui/ui_js/: package-lock.json  package.json
ui_outdated/: ui_combined.py
ui_outdated/avatar/: avatar.py
