[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Alter_Ego"
version = "0.1.0"
authors = [
    {name = "L4w1i3t", email = "clmelvin2004@gmail.com"},
]
description = "A desktop AI program that uses OpenAI and ElevenLabs APIs to allow you to textually or verbally converse with anyone you want--literally. "
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
# add deps when you know what they are
dependencies = [
    "accelerate>=0.34.2,<0.35.0",
    "aiohappyeyeballs>=2.4.3,<2.5.0",
    "aiohttp>=3.10.10,<3.11.0",
    "aiosignal>=1.3.1,<1.4.0",
    "altgraph>=0.17.4,<0.18.0",
    "annotated-types>=0.7.0,<0.8.0",
    "anyio>=4.6.0,<4.7.0",
    "appdirs>=1.4.4,<1.5.0",
    "attrs>=24.2.0,<24.3.0",
    "beautifulsoup4>=4.12.3,<4.13.0",
    "bitsandbytes>=0.44.1,<0.45.0",
    "black>=24.10.0,<24.11.0",
    "blinker>=1.8.2,<1.9.0",
    "Brotli>=1.1.0,<1.2.0",
    "certifi>=2024.8.30,<2024.9.0",
    "cffi>=1.17.1,<1.18.0",
    "charset-normalizer>=3.3.2,<3.4.0",
    "click>=8.1.7,<8.2.0",
    "cloudpickle>=3.1.0,<3.2.0",
    "colorama>=0.4.6,<0.5.0",
    "compressed-tensors>=0.6.0,<0.7.0",
    "contourpy>=1.3.0,<1.4.0",
    "cryptography>=43.0.3,<43.1.0",
    "cycler>=0.12.1,<0.13.0",
    "Cython>=3.0.11,<3.1.0",
    "datasets>=3.0.1,<3.1.0",
    "dill>=0.3.8,<0.4.0",
    "discord>=2.3.2,<2.4.0",
    "discord.py>=2.4.0,<2.5.0",
    "diskcache>=5.6.3,<5.7.0",
    "distro>=1.9.0,<1.10.0",
    "einops>=0.8.0,<0.9.0",
    "elevenlabs>=1.9.0,<1.10.0",
    "fastapi>=0.115.0,<0.116.0",
    "ffmpeg-python>=0.2.0,<0.3.0",
    "filelock>=3.16.1,<3.17.0",
    "Flask>=3.0.3,<3.1.0",
    "fonttools>=4.54.1,<4.55.0",
    "frozenlist>=1.4.1,<1.5.0",
    "fsspec>=2024.6.1,<2024.7.0",
    "future>=1.0.0,<1.1.0",
    "gguf>=0.10.0,<0.11.0",
    "h11>=0.14.0,<0.15.0",
    "httpcore>=1.0.5,<1.1.0",
    "httptools>=0.6.4,<0.7.0",
    "httpx>=0.27.2,<0.28.0",
    "huggingface-hub>=0.25.0,<0.26.0",
    "idna>=3.10,<4.0",
    "importlib_metadata>=8.5.0,<8.6.0",
    "iniconfig>=2.0.0,<2.1.0",
    "interegular>=0.3.3,<0.4.0",
    "itsdangerous>=2.2.0,<2.3.0",
    "jellyfish>=1.1.0,<1.2.0",
    "Jinja2>=3.1.4,<3.2.0",
    "jiter>=0.5.0,<0.6.0",
    "joblib>=1.4.2,<1.5.0",
    "jsonschema>=4.23.0,<4.24.0",
    "jsonschema-specifications>=2024.10.1,<2024.11.0",
    "keyboard>=0.13.5,<0.14.0",
    "kiwisolver>=1.4.7,<1.5.0",
    "lark>=1.2.2,<1.3.0",
    "llvmlite>=0.43.0,<0.44.0",
    "lm-format-enforcer>=0.10.6,<0.11.0",
    "Markdown>=3.7,<3.8",
    "MarkupSafe>=2.1.5,<2.2.0",
    "matplotlib>=3.9.2,<3.10.0",
    "memory-profiler>=0.61.0,<0.62.0",
    "meson>=1.6.0,<1.7.0",
    "mistral_common>=1.4.4,<1.5.0",
    "more-itertools>=10.5.0,<10.6.0",
    "mpmath>=1.3.0,<1.4.0",
    "msgpack>=1.1.0,<1.2.0",
    "msgspec>=0.18.6,<0.19.0",
    "multidict>=6.1.0,<6.2.0",
    "multiprocess>=0.70.16,<0.71.0",
    "mutagen>=1.47.0,<1.48.0",
    "mypy-extensions>=1.0.0,<1.1.0",
    "nest-asyncio>=1.6.0,<1.7.0",
    "networkx>=3.3,<3.4",
    "ngrok>=1.4.0,<1.5.0",
    "Nuitka>=2.5.1,<2.6.0",
    "numba>=0.60.0,<0.61.0",
    "numpy>=1.26.4,<1.27.0",
    "nvidia-ml-py>=12.560.30,<12.561.0",
    "openai>=1.47.0,<1.48.0",
    "openai-whisper>=20231117,<20231118",
    "opencv-python-headless>=4.10.0.84,<4.10.1.0",
    "ordered-set>=4.1.0,<4.2.0",
    "outlines>=0.0.46,<0.0.47",
    "packaging>=24.1,<24.2",
    "pandas>=2.2.3,<2.3.0",
    "partial-json-parser>=0.2.1.1.post4,<0.2.1.2",
    "pathspec>=0.12.1,<0.12.2",
    "pefile>=2023.2.7,<2023.2.8",
    "pillow>=10.4.0,<10.5.0",
    "platformdirs>=4.3.6,<4.4.0",
    "pluggy>=1.5.0,<1.6.0",
    "prometheus-fastapi-instrumentator>=7.0.0,<7.1.0",
    "prometheus_client>=0.21.0,<0.22.0",
    "propcache>=0.2.0,<0.3.0",
    "protobuf>=5.28.2,<5.29.0",
    "psutil>=6.0.0,<6.1.0",
    "py-cpuinfo>=9.0.0,<9.1.0",
    "pyairports>=2.1.1,<2.2.0",
    "pyarrow>=17.0.0,<17.1.0",
    "PyAudio>=0.2.14,<0.2.15",
    "pycompile>=0.2.3,<0.2.4",
    "pycountry>=24.6.1,<24.7.0",
    "pycparser>=2.22,<2.23",
    "pycryptodomex>=3.20.0,<3.21.0",
    "pydantic>=2.9.2,<2.10.0",
    "pydantic_core>=2.23.4,<2.24.0",
    "pygame>=2.6.0,<2.7.0",
    "Pygments>=2.18.0,<2.19.0",
    "pyinstaller>=6.11.0,<6.12.0",
    "pyinstaller-hooks-contrib>=2024.9,<2024.10",
    "pyparsing>=3.1.4,<3.1.5",
    "PyPDF2>=3.0.1,<3.0.2",
    "PyQt5>=5.15.11,<5.15.12",
    "PyQt5-Qt5>=5.15.2,<5.15.3",
    "PyQt5_sip>=12.15.0,<12.16.0",
    "PyQtWebEngine>=5.15.7,<5.15.8",
    "PyQtWebEngine-Qt5>=5.15.2,<5.15.3",
    "pytest>=8.3.3,<8.4.0",
    "pytest-benchmark>=4.0.0,<4.1.0",
    "python-dateutil>=2.9.0.post0,<2.9.1",
    "python-dotenv>=1.0.1,<1.0.2",
    "pytz>=2024.2,<2024.3",
    "pywin32>=306,<307",
    "pywin32-ctypes>=0.2.3,<0.2.4",
    "PyYAML>=6.0.2,<6.0.3",
    "pyzmq>=26.2.0,<26.3.0",
    "ray>=2.37.0,<2.38.0",
    "referencing>=0.35.1,<0.35.2",
    "regex>=2024.9.11,<2024.9.12",
    "requests>=2.32.3,<2.32.4",
    "rpds-py>=0.20.0,<0.21.0",
    "safetensors>=0.4.5,<0.4.6",
    "scikit-learn>=1.5.2,<1.5.3",
    "scipy>=1.14.1,<1.14.2",
    "segtok>=1.5.11,<1.5.12",
    "sentence-transformers>=3.1.1,<3.1.2",
    "sentencepiece>=0.2.0,<0.2.1",
    "setuptools>=75.1.0,<75.2.0",
    "six>=1.16.0,<1.17.0",
    "sk>=0.0.1,<0.0.2",
    "sniffio>=1.3.1,<1.3.2",
    "sounddevice>=0.5.0,<0.5.1",
    "soundfile>=0.12.1,<0.12.2",
    "soupsieve>=2.6,<2.7",
    "starlette>=0.38.6,<0.38.7",
    "sympy>=1.13.3,<1.13.4",
    "tabulate>=0.9.0,<0.10.0",
    "threadpoolctl>=3.5.0,<3.5.1",
    "tiktoken>=0.7.0,<0.7.1",
    "tokenizers>=0.20.1,<0.20.2",
    "torch>=2.4.0,<2.5.0",
    "torchaudio>=2.4.0,<2.5.0",
    "torchvision>=0.19.0,<0.19.1",
    "tqdm>=4.66.5,<4.66.6",
    "transformers>=4.45.2,<4.45.3",
    "typing_extensions>=4.12.2,<4.13.0",
    "tzdata>=2024.2,<2024.3",
    "urllib3>=2.2.3,<2.2.4",
    "uvicorn>=0.31.0,<0.31.1",
    "vllm>=0.6.3.post1,<0.6.4",
    "watchfiles>=0.24.0,<0.24.1",
    "websockets>=13.1,<13.2",
    "Werkzeug>=3.0.4,<3.0.5",
    "whisper>=1.1.10,<1.1.11",
    "xxhash>=3.5.0,<3.5.1",
    "yake>=0.4.8,<0.4.9",
    "yarl>=1.15.5,<1.15.6",
    "yt-dlp>=2024.8.6,<2024.8.7",
    "zipp>=3.20.2,<3.20.3",
    "zstandard>=0.23.0,<0.23.1",
]


[project.gui-scripts]
# name of the command = "module_name:function_name"
alter-ego-ai-gui = "alter_ego.gui:main"


# [project.scripts]
# alter-ego-ai = "alter_ego_ai.cli:main"