[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Alter_Ego"
version = "0.1.0"
authors = [
    {name = "L4w1i3t", email = "clmelvin2004@gmail.com"},
]
description = "A desktop AI program that uses OpenAI and ElevenLabs APIs to allow you to textually or verbally converse with anyone you want--literally. "
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
# add deps when you know what they are
dependencies = [
    
]


[project.gui-scripts]
# name of the command = "module_name:function_name"
alter-ego-ai-gui = "alter_ego.gui:main"


# [project.scripts]
# alter-ego-ai = "alter_ego_ai.cli:main"